changed from day chatt to woods at main graphic for better contrast with text.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2082,7 +2082,7 @@ button:active,
 
 #main>section.one {
     background-color: #81918E;
-    background-image: url("../../images/day-chatt1.jpg");
+    background-image: url("../../images/header-woods.jpg");
 }
 
 #main>section.two {
