--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2083,6 +2083,7 @@ button:active,
 #main>section.one {
     background-color: #81918E;
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.1)), url("../../images/header-chatt.jpg");
+    background-attachment: fixed;
 }
 
 #main>section.two {
